--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Watki
+name: Watki's website
 
 # Short bio or description (displayed in the header)
-description: This blog will be about the many IT lessons I have and will have over the next few years at my new school.
+description: Cumputer enthusiast.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: Wockinine
   instagram:
   linkedin:
   pinterest:
