--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Watki's website
 description: Cumputer enthusiast.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://tse1.mm.bing.net/th?&id=OIP.Mf4cd109d0507587cf6244033ee2809cdH0&w=299&h=221&c=0&pid=1.9&rs=0&p=0&r=0
 
 #
 # Flags below are optional
