--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Watki's website
 description: Cumputer enthusiast.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://tse1.mm.bing.net/th?&id=OIP.Mf4cd109d0507587cf6244033ee2809cdH0&w=299&h=221&c=0&pid=1.9&rs=0&p=0&r=0
-
+avatar: https://avatars1.githubusercontent.com/u/22594304?v=3&u=fd39f8fbbdeaa374fde68fa1047506c741f23b55&s=140
 #
 # Flags below are optional
 #
