--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Watki's website
 
 # Short bio or description (displayed in the header)
-description: Cumputer enthusiast.
+description: Computer enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/22594304?v=3&u=fd39f8fbbdeaa374fde68fa1047506c741f23b55&s=140
