--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Watkis' Website
+name: Ben Watkinson
 
 # Short bio or description (displayed in the header)
-description: Sponsered by TinyTech Computers.
+description: CEO TinyTech Computer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/22594304?v=3&u=fd39f8fbbdeaa374fde68fa1047506c741f23b55&s=140
